--- a/nachweiseBackend/src/main/resources/application.properties
+++ b/nachweiseBackend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3308/digitalisierungAusbildungsnachweis
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
