--- a/nachweiseBackend/src/main/resources/api.yaml
+++ b/nachweiseBackend/src/main/resources/api.yaml
@@ -75,7 +75,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/userGet'
 
-  /user/{userName}/requested:
+  /proof/{userName}/requested:
     parameters:
       - name: userName
         in: path
@@ -86,6 +86,7 @@ paths:
       tags:
         - Proof
       description: get proofs requested for acknowledgement
+      operationId: getRequestedForUser
       responses:
         200:
           description: list of proofs requested for acknowledgement
@@ -178,7 +179,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/proofData'
+              $ref: '#/components/schemas/proofPost'
       responses:
         200:
           description: Created Proof
@@ -187,7 +188,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/proofGet'
 
+  /proof/preview:
+    get:
+      tags:
+        - Proof
+      description: get Proof previews
+      operationId: getPreview
+      responses:
+        200:
+          description: list of previews
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/proofPreview'
+
   /proof/{id}:
+    parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+        required: true
     patch:
       tags:
         - Proof
@@ -205,10 +226,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/proofGet'
 
+    get:
+      tags:
+        - Proof
+      operationId: getProof
+      responses:
+        200:
+          description: patched
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/proofGet'
+
   /proof/{id}/acknowledgement:
+    parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+        required: true
     post:
       tags:
         - Acknowledgement
+      operationId: postAcknowledgement
       requestBody:
         content:
           application/json:
@@ -221,6 +261,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/acknowledgement'
+    get:
+      tags:
+        - Acknowledgement
+      description: Get List of messages and status
+      operationId: getAcknowledgements
+      responses:
+        200:
+          description: List of messages and status
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/acknowledgementList'
 
 components:
   schemas:
@@ -311,7 +363,53 @@ components:
           type: string
           pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
 
-    proofData:
+    dayEntryData:
+      type: array
+      required:
+        - workDone
+        - hours
+      items:
+        type: object
+        properties:
+          workDone:
+            type: string
+          hours:
+            type: integer
+
+    dayGet:
+      type: object
+      required:
+        - entries
+        - department
+        - hours
+      properties:
+        entries:
+            $ref: '#/components/schemas/dayEntryData'
+        department:
+          type: string
+        hours:
+          type: integer
+
+    dayPost:
+      type: object
+      required:
+        - entries
+        - department
+      properties:
+        entries:
+            $ref: '#/components/schemas/dayEntryData'
+        department:
+          type: string
+
+    dayPatch:
+      type: object
+      properties:
+        entries:
+            $ref: '#/components/schemas/dayEntryData'
+        department:
+          type: string
+
+    proofPost:
       type: object
       required:
         - monday
@@ -319,23 +417,17 @@ components:
         - wednesday
         - thursday
         - friday
-        - weekStartDate
       properties:
         monday:
-          type: string
+          $ref: '#/components/schemas/dayPost'
         tuesday:
-          type: string
+          $ref: '#/components/schemas/dayPost'
         wednesday:
-          type: string
+          $ref: '#/components/schemas/dayPost'
         thursday:
-          type: string
+          $ref: '#/components/schemas/dayPost'
         friday:
-          type: string
-        department:
-          type: string
-        weekStartDate:
-          type: string
-          pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
+          $ref: '#/components/schemas/dayPost'
         requested:
           type: boolean
           default: false
@@ -344,36 +436,54 @@ components:
       type: object
       properties:
         monday:
-          type: string
+          $ref: '#/components/schemas/dayPatch'
         tuesday:
-          type: string
+          $ref: '#/components/schemas/dayPatch'
         wednesday:
-          type: string
+          $ref: '#/components/schemas/dayPatch'
         thursday:
-          type: string
+          $ref: '#/components/schemas/dayPatch'
         friday:
-          type: string
-        department:
-          type: string
-        weekStartDate:
-          type: string
-          pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
+          $ref: '#/components/schemas/dayPatch'
         requested:
           type: boolean
           default: false
 
+    proofGet:
+      required:
+        - monday
+        - tuesday
+        - wednesday
+        - thursday
+        - friday
+        - requested
+        - weekStartDate
+      type: object
+      properties:
+        monday:
+          $ref: '#/components/schemas/dayGet'
+        tuesday:
+          $ref: '#/components/schemas/dayGet'
+        wednesday:
+          $ref: '#/components/schemas/dayGet'
+        thursday:
+          $ref: '#/components/schemas/dayGet'
+        friday:
+          $ref: '#/components/schemas/dayGet'
+        department:
+          $ref: '#/components/schemas/dayGet'
+        acknowledgement:
+          $ref: '#/components/schemas/acknowledgementList'
+        requested:
+          type: boolean
+        weekStartDate:
+          type: string
+          pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
+
     proofArray:
       type: array
       items:
-        - $ref: '#/components/schemas/proofGet'
-
-    proofGet:
-      allOf:
-        - $ref: '#/components/schemas/proofData'
-        - type: object
-          properties:
-            id:
-              type: integer
+        $ref: '#/components/schemas/proofGet'
 
     acknowledgement:
       type: object
@@ -385,6 +495,39 @@ components:
           type: boolean
         message:
           type: string
+
+    acknowledgementList:
+      type: object
+      required:
+        - acknowledged
+        - messages
+      properties:
+        acknowledged:
+          type: boolean
+        messages:
+          type: array
+          items:
+            type: string
+
+    proofPreview:
+      type: array
+      items:
+        type: object
+        required:
+          - id
+          - weekStartDate
+          - requested
+          - acknowledged
+        properties:
+          id:
+            type: integer
+          weekStartDate:
+            type: string
+            pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
+          requested:
+            type: boolean
+          acknowledged:
+            type: boolean
 
   securitySchemes:
     cookieAuth:
