--- a/nachweiseBackend/src/main/resources/api.yaml
+++ b/nachweiseBackend/src/main/resources/api.yaml
@@ -75,7 +75,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/userGet'
 
-  /proof/{userName}/requested:
+  /user/{userName}/requested:
     parameters:
       - name: userName
         in: path
@@ -93,7 +93,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/proofArray'
+                $ref: '#/components/schemas/proofPreview'
+
+  /user/{userName}/proofs:
+    parameters:
+      - name: userName
+        in: path
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - Proof
+      description: get proofs which are acknowledged
+      operationId: getForUser
+      responses:
+        200:
+          description: list of proofs requested for acknowledgement
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/proofPreview'
 
   /apprenticeship:
     post:
@@ -417,6 +437,7 @@ components:
         - wednesday
         - thursday
         - friday
+        - saturday
       properties:
         monday:
           $ref: '#/components/schemas/dayPost'
@@ -427,6 +448,8 @@ components:
         thursday:
           $ref: '#/components/schemas/dayPost'
         friday:
+          $ref: '#/components/schemas/dayPost'
+        saturday:
           $ref: '#/components/schemas/dayPost'
         requested:
           type: boolean
@@ -445,6 +468,8 @@ components:
           $ref: '#/components/schemas/dayPatch'
         friday:
           $ref: '#/components/schemas/dayPatch'
+        saturday:
+          $ref: '#/components/schemas/dayPatch'
         requested:
           type: boolean
           default: false
@@ -456,6 +481,7 @@ components:
         - wednesday
         - thursday
         - friday
+        - saturday
         - requested
         - weekStartDate
       type: object
@@ -470,7 +496,7 @@ components:
           $ref: '#/components/schemas/dayGet'
         friday:
           $ref: '#/components/schemas/dayGet'
-        department:
+        saturday:
           $ref: '#/components/schemas/dayGet'
         acknowledgement:
           $ref: '#/components/schemas/acknowledgementList'
@@ -479,11 +505,6 @@ components:
         weekStartDate:
           type: string
           pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
-
-    proofArray:
-      type: array
-      items:
-        $ref: '#/components/schemas/proofGet'
 
     acknowledgement:
       type: object
@@ -516,18 +537,20 @@ components:
         required:
           - id
           - weekStartDate
-          - requested
-          - acknowledged
+          - started
         properties:
           id:
             type: integer
           weekStartDate:
             type: string
             pattern: '[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])'
-          requested:
-            type: boolean
-          acknowledged:
-            type: boolean
+          status:
+            type: string
+            enum:
+              - SAVED
+              - REQUESTED
+              - REJECTED
+              - ACCEPTED
 
   securitySchemes:
     cookieAuth:
